# qt-ui-template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/widgets/: mainpanel.cpp  mainpanel.h
src/widgets/buttons/: custom_button.cpp  custom_button.h
src/widgets/textedits/: custom_text_edit.cpp  custom_text_edit.h
